--- a/index.html
+++ b/index.html
@@ -1194,12 +1194,12 @@
                                         </div>
                                         <div id="el-517" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/3tYOPQm" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Reversible Plushie Cat</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">Babique Reversible plushie Cat Stuffed Soft Toy Plush Soft Toy Cute Kids Animal Home Decor Boys/Girls/Baby (Blue 15cm). Available in various colors.</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">517</span>
@@ -1209,12 +1209,12 @@
                                         </div>
                                         <div id="el-518" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/47RhFjc" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Astronaut Galaxy Projector</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">NYRWANA DELIVERING SMILES IN INIDA Astronaut Galaxy Projector, Night Light for Bedroom, Room Lights for Bedroom, Christmas Decorations Items.</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">518</span>
