--- a/index.html
+++ b/index.html
@@ -1224,12 +1224,12 @@
                                         </div>
                                         <div id="el-519" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/47QJ98X" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Handyvap VAP-100 Steamer</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">MEDTECH Handyvap VAP-100 Steamer for Cold & Cough, Vapourizer & Steamer for Face steam, Steam Inhaler & Vaporizer Machine with Nano-Ionic Technology</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">519</span>
@@ -1239,12 +1239,12 @@
                                         </div>
                                         <div id="el-520" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/499bTuo" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Reversible Carrot Strawberry Bunny Plush Toy</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">Storescent Reversible Carrot Strawberry Bunny Plush Toy - Cute & Versatile Stuffed Animal with Zipper</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">520</span>
@@ -1254,12 +1254,12 @@
                                         </div>
                                         <div id="el-521" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/47Kzssl" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Donald Ceramic Milk & Coffee Mug</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">JCPL Donald Ceramic Milk & Coffee Mug, 330ml. Available in Several colors.</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">521</span>
@@ -1269,12 +1269,12 @@
                                         </div>
                                         <div id="el-522" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="" target=”_blank”>
+                                                <a href="https://amzn.to/3UeR8JQ" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+                                                            <h5 class="mb-2">Tumbler Cup with Wodden Lid</h5>
 
-                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                                <p class="mb-0">iKiluxxa Glass Beer Soda Can Sipper Mug Fruit Juice Milk with Wooden Lid and Straw 385ml - Tea Coffee Tumbler Cup Set of 2 Starw Glass</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">522</span>
